[package]
name = "grid"
version = "0.0.1"
authors = ["zero@ref.finance"]
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
near-sys = "0.2.0"
uint = { version = "0.9.5", default-features = false }
serde_json = "1.0.85"
once_cell = "1.18.0"

[dev-dependencies]
workspaces = "0.7.0"
tokio = { version = "1.33.0", features = ["full"] }
near-units = "0.2.0"
rand = "0.8"
approx = "0.5"
lazy_static = "1.4.0"
common = { path = "../common/" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
]
